# rtos.02

./: .gitignore  .gitmodules  CMakeLists.txt  hello_world.resc  monitor.py  pico_sdk_import.cmake  rpi_pico_rp2040_w.repl  test.resc  unity.cmake  vscode.cmake
.github/workflows/: main.yml
blink/: CMakeLists.txt  blink.c
hello_freertos/: CMakelists.txt
include/: stuff.h
src/: CMakeLists.txt  CMakelists.txt  hello_freertos.c  stuff.c  tasks.c
test/: CMakeLists.txt  CMakelists.txt  hello_world.dts  hello_world.elf  hello_world.robot  simulate.resc  test.c  test.resc
